--- a/ProjectHKII-Website/src/view/pages/index.pug
+++ b/ProjectHKII-Website/src/view/pages/index.pug
@@ -7,3 +7,4 @@ block main-content
         include ../patials/products.pug
     block icon-box
         include ../patials/icon-box.pug
+    //- Khanh
