--- a/ProjectHKII-Website/src/view/patials/navigation.pug
+++ b/ProjectHKII-Website/src/view/patials/navigation.pug
@@ -29,42 +29,232 @@ section.menu-nav
             .bot-navbar.flex-row
                 ul.nav
                     li.hover-nav
-                        a
+                        a(href="#")
                             i.fas.fa-star
                             span giúp bạn chọn
                     li.hover-nav
-                        a
+                        a(href="#")
                             span dụng cụ văn phòng
                             i.fas.fa-chevron-down.arrow-down
+                        ul.nav-dropdown
+                            li.nav-hover-dropdown
+                                a(href="#") Bấm kim
+                            li.nav-hover-dropdown
+                                a(href="#") Bấm lỗ
+                            li.nav-hover-dropdown
+                                a(href="#") Dao kéo
+                            li.nav-hover-dropdown
+                                a(href="#") Kim bấm
+                            li.nav-hover-dropdown
+                                a(href="#") Kẹp sách - Gáy sách
+                            li.nav-hover-dropdown
+                                a(href="#") Băng keo - Cắt keo
+                            li.nav-hover-dropdown
+                                a(href="#") Keo dán
+                            li.nav-hover-dropdown
+                                a(href="#") Thước - Compa
+                            li.nav-hover-dropdown
+                                a(href="#") Dây buộc
+                            li.nav-hover-dropdown
+                                a(href="#") Đóng dấu - Tampon
                     li.hover-nav
-                        a
+                        a(href="#")
                             span giấy
                             i.fas.fa-chevron-down.arrow-down
+                        ul.nav-dropdown
+                            li.nav-hover-dropdown
+                                a(href="#") Bấm kim
+                            li.nav-hover-dropdown
+                                a(href="#") Bấm lỗ
+                            li.nav-hover-dropdown
+                                a(href="#") Dao kéo
+                            li.nav-hover-dropdown
+                                a(href="#") Kim bấm
+                            li.nav-hover-dropdown
+                                a(href="#") Kẹp sách - Gáy sách
+                            li.nav-hover-dropdown
+                                a(href="#") Băng keo - Cắt keo
+                            li.nav-hover-dropdown
+                                a(href="#") Keo dán
+                            li.nav-hover-dropdown
+                                a(href="#") Thước - Compa
+                            li.nav-hover-dropdown
+                                a(href="#") Dây buộc
+                            li.nav-hover-dropdown
+                                a(href="#") Đóng dấu - Tampon
                     li.hover-nav
-                        a
+                        a(href="#")
                             span bìa hồ sơ
                             i.fas.fa-chevron-down.arrow-down
+                        ul.nav-dropdown
+                            li.nav-hover-dropdown
+                                a(href="#") Bấm kim
+                            li.nav-hover-dropdown
+                                a(href="#") Bấm lỗ
+                            li.nav-hover-dropdown
+                                a(href="#") Dao kéo
+                            li.nav-hover-dropdown
+                                a(href="#") Kim bấm
+                            li.nav-hover-dropdown
+                                a(href="#") Kẹp sách - Gáy sách
+                            li.nav-hover-dropdown
+                                a(href="#") Băng keo - Cắt keo
+                            li.nav-hover-dropdown
+                                a(href="#") Keo dán
+                            li.nav-hover-dropdown
+                                a(href="#") Thước - Compa
+                            li.nav-hover-dropdown
+                                a(href="#") Dây buộc
+                            li.nav-hover-dropdown
+                                a(href="#") Đóng dấu - Tampon
                     li.hover-nav
-                        a
+                        a(href="#")
                             span bút viết
                             i.fas.fa-chevron-down.arrow-down
+                        ul.nav-dropdown
+                            li.nav-hover-dropdown
+                                a(href="#") Bấm kim
+                            li.nav-hover-dropdown
+                                a(href="#") Bấm lỗ
+                            li.nav-hover-dropdown
+                                a(href="#") Dao kéo
+                            li.nav-hover-dropdown
+                                a(href="#") Kim bấm
+                            li.nav-hover-dropdown
+                                a(href="#") Kẹp sách - Gáy sách
+                            li.nav-hover-dropdown
+                                a(href="#") Băng keo - Cắt keo
+                            li.nav-hover-dropdown
+                                a(href="#") Keo dán
+                            li.nav-hover-dropdown
+                                a(href="#") Thước - Compa
+                            li.nav-hover-dropdown
+                                a(href="#") Dây buộc
+                            li.nav-hover-dropdown
+                                a(href="#") Đóng dấu - Tampon
                     li.hover-nav
-                        a
+                        a(href="#")
                             span tập sổ
                             i.fas.fa-chevron-down.arrow-down
+                        ul.nav-dropdown
+                            li.nav-hover-dropdown
+                                a(href="#") Bấm kim
+                            li.nav-hover-dropdown
+                                a(href="#") Bấm lỗ
+                            li.nav-hover-dropdown
+                                a(href="#") Dao kéo
+                            li.nav-hover-dropdown
+                                a(href="#") Kim bấm
+                            li.nav-hover-dropdown
+                                a(href="#") Kẹp sách - Gáy sách
+                            li.nav-hover-dropdown
+                                a(href="#") Băng keo - Cắt keo
+                            li.nav-hover-dropdown
+                                a(href="#") Keo dán
+                            li.nav-hover-dropdown
+                                a(href="#") Thước - Compa
+                            li.nav-hover-dropdown
+                                a(href="#") Dây buộc
+                            li.nav-hover-dropdown
+                                a(href="#") Đóng dấu - Tampon
                     li.hover-nav
-                        a
+                        a(href="#")
                             span lưu trữ
                             i.fas.fa-chevron-down.arrow-down
+                        ul.nav-dropdown
+                            li.nav-hover-dropdown
+                                a(href="#") Bấm kim
+                            li.nav-hover-dropdown
+                                a(href="#") Bấm lỗ
+                            li.nav-hover-dropdown
+                                a(href="#") Dao kéo
+                            li.nav-hover-dropdown
+                                a(href="#") Kim bấm
+                            li.nav-hover-dropdown
+                                a(href="#") Kẹp sách - Gáy sách
+                            li.nav-hover-dropdown
+                                a(href="#") Băng keo - Cắt keo
+                            li.nav-hover-dropdown
+                                a(href="#") Keo dán
+                            li.nav-hover-dropdown
+                                a(href="#") Thước - Compa
+                            li.nav-hover-dropdown
+                                a(href="#") Dây buộc
+                            li.nav-hover-dropdown
+                                a(href="#") Đóng dấu - Tampon
                     li.hover-nav
-                        a
+                        a(href="#")
                             span thiết bị
                             i.fas.fa-chevron-down.arrow-down
+                        ul.nav-dropdown
+                            li.nav-hover-dropdown
+                                a(href="#") Bấm kim
+                            li.nav-hover-dropdown
+                                a(href="#") Bấm lỗ
+                            li.nav-hover-dropdown
+                                a(href="#") Dao kéo
+                            li.nav-hover-dropdown
+                                a(href="#") Kim bấm
+                            li.nav-hover-dropdown
+                                a(href="#") Kẹp sách - Gáy sách
+                            li.nav-hover-dropdown
+                                a(href="#") Băng keo - Cắt keo
+                            li.nav-hover-dropdown
+                                a(href="#") Keo dán
+                            li.nav-hover-dropdown
+                                a(href="#") Thước - Compa
+                            li.nav-hover-dropdown
+                                a(href="#") Dây buộc
+                            li.nav-hover-dropdown
+                                a(href="#") Đóng dấu - Tampon
                     li.hover-nav
-                        a
+                        a(href="#")
                             span tiện ích
                             i.fas.fa-chevron-down.arrow-down
+                        ul.nav-dropdown
+                            li.nav-hover-dropdown
+                                a(href="#") Bấm kim
+                            li.nav-hover-dropdown
+                                a(href="#") Bấm lỗ
+                            li.nav-hover-dropdown
+                                a(href="#") Dao kéo
+                            li.nav-hover-dropdown
+                                a(href="#") Kim bấm
+                            li.nav-hover-dropdown
+                                a(href="#") Kẹp sách - Gáy sách
+                            li.nav-hover-dropdown
+                                a(href="#") Băng keo - Cắt keo
+                            li.nav-hover-dropdown
+                                a(href="#") Keo dán
+                            li.nav-hover-dropdown
+                                a(href="#") Thước - Compa
+                            li.nav-hover-dropdown
+                                a(href="#") Dây buộc
+                            li.nav-hover-dropdown
+                                a(href="#") Đóng dấu - Tampon
                     li.hover-nav
-                        a
+                        a(href="#")
                             span mực - ruban
                             i.fas.fa-chevron-down.arrow-down
+                        ul.nav-dropdown
+                            li.nav-hover-dropdown
+                                a(href="#") Bấm kim
+                            li.nav-hover-dropdown
+                                a(href="#") Bấm lỗ
+                            li.nav-hover-dropdown
+                                a(href="#") Dao kéo
+                            li.nav-hover-dropdown
+                                a(href="#") Kim bấm
+                            li.nav-hover-dropdown
+                                a(href="#") Kẹp sách - Gáy sách
+                            li.nav-hover-dropdown
+                                a(href="#") Băng keo - Cắt keo
+                            li.nav-hover-dropdown
+                                a(href="#") Keo dán
+                            li.nav-hover-dropdown
+                                a(href="#") Thước - Compa
+                            li.nav-hover-dropdown
+                                a(href="#") Dây buộc
+                            li.nav-hover-dropdown
+                                a(href="#") Đóng dấu - Tampon
+
