--- a/ProjectHKII-Website/src/sass/components/navigation.scss
+++ b/ProjectHKII-Website/src/sass/components/navigation.scss
@@ -104,6 +104,7 @@
                 justify-content: center;
                 padding: 0rem 1rem;
                 li.hover-nav {
+                    position: relative;
                     margin: 0 1.3rem;
                     color: #555;
                     cursor: pointer;
@@ -112,9 +113,37 @@
                     -moz-transition: all .2s ease;
                     -ms-transition: all .2s ease;
                     -o-transition: all .2s ease;
-                    &:hover {
+                    &:hover a{
                         color: #026dcf;
                     }
+                    &:not(:first-child):hover:before {
+                        opacity: 1;
+                    }
+                    &:hover .nav-dropdown {
+                        opacity: 1;
+                        max-height: inherit;
+                        pointer-events: inherit;
+                    }
+                    &:not(:first-child):before {
+                        content: "";
+                        z-index: 10;
+                        opacity: 0;
+                        left: 31%;
+                        bottom: -2px;
+                        width: 0;
+                        height: 0;
+                        border-left: 8px solid transparent;
+                        border-right: 8px solid transparent;
+                        border-bottom: 10px solid #fff;
+                        position: absolute;
+                        pointer-events: none;
+                        transition: opacity .25s;
+                        -webkit-transition: opacity .25s;
+                        -moz-transition: opacity .25s;
+                        -ms-transition: opacity .25s;
+                        -o-transition: opacity .25s;
+                    }
+
                     a {
                         text-transform: uppercase;
                         font-size: 1.5rem;
@@ -131,6 +160,55 @@
                             font-size: 1.1rem;
                             margin-left: .3rem;
                             opacity: .6;
+                        }
+                    }
+                    &:last-child .nav-dropdown {
+                        margin-left: -9rem;
+                    }
+                    .nav-dropdown {
+                        background-color: #fff;
+                        position: absolute;
+                        left: -1.5rem;
+                        min-width: 260px;
+                        z-index: 9;
+                        padding: 2rem 0;
+                        opacity: 0;
+                        transition: opacity .25s;
+                        -webkit-transition: opacity .25s;
+                        -moz-transition: opacity .25s;
+                        -ms-transition: opacity .25s;
+                        -o-transition: opacity .25s;
+                        box-shadow: 1px 1px 15px rgba(0,0,0,0.15);
+                        border: 2px solid #ddd;
+                        border-radius: 1rem;
+                        -webkit-border-radius: 1rem;
+                        -moz-border-radius: 1rem;
+                        -ms-border-radius: 1rem;
+                        -o-border-radius: 1rem;
+                        pointer-events: none;
+                        li.nav-hover-dropdown {
+                            display: block;
+                            list-style: none;
+                            &:hover {
+                                background-color: rgba(0,0,0,0.03);
+                                color: rgba(17,17,17,0.85);
+                                transition: all .2s ease;
+                                -webkit-transition: all .2s ease;
+                                -moz-transition: all .2s ease;
+                                -ms-transition: all .2s ease;
+                                -o-transition: all .2s ease;
+                            }
+                            a {
+                                color: rgba(102,102,102,0.85);
+                                font-size: 80%;
+                                font-weight: 400;
+                                width: auto;
+                                line-height: 1.3;
+                                padding: 1rem 2rem;
+                                text-decoration: none;
+                                text-transform: none;
+                                display: block;
+                            }
                         }
                     }
                 }
