--- a/ProjectHKII-Website/src/sass/components/banner.scss
+++ b/ProjectHKII-Website/src/sass/components/banner.scss
@@ -1,7 +1,28 @@
 .banner {
+    position: relative;
     z-index: 1;
-    height: 60rem;
+    // height: 60rem;
     // margin-bottom: 2rem;
+    .owl-carousel {
+        .owl-nav {
+            button.owl-prev {
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 100%;
+                width: 10rem;
+                margin: 0;
+            }
+            button.owl-next {
+                position: absolute;
+                top: 0;
+                right: 0;
+                height: 100%;
+                width: 10rem;
+                margin: 0;
+            }
+        }
+    }
     .carousel-inner {
         img {
             width: 114%!important;
