--- a/ProjectHKII-Website/src/sass/_typography.scss
+++ b/ProjectHKII-Website/src/sass/_typography.scss
@@ -20,6 +20,11 @@ body, td, th, input, button{
     color: #777;
 }
 
+.container-fluid {
+    padding: 0 !important;
+    // overflow: hidden;
+}
+
 .navbar {
     position: relative;
     display: flex;
@@ -38,17 +43,16 @@ body, td, th, input, button{
 }
 
 .fill {
-    top: 0;
+    position: absolute;
+    top: -2px;
     bottom: 0;
     left: 0;
     right: 0;
-    position: absolute;
     height: 100%;
     padding: 0 !important;
     margin: 0 !important;
 }
 
-@keyframes fadeEffect {
-    from {opacity: 0;}
-    to {opacity: 1;}
+.clear {
+    clear: both;
 }
