--- a/ProjectHKII-Website/src/sass/components/banner.scss
+++ b/ProjectHKII-Website/src/sass/components/banner.scss
@@ -1,115 +1,145 @@
-.banner {
-    position: relative;
-    z-index: 1;
-    // height: 60rem;
-    // margin-bottom: 2rem;
-    .owl-carousel {
-        .owl-nav {
-            button.owl-prev {
-                position: absolute;
-                top: 0;
-                left: 0;
-                height: 100%;
-                width: 10rem;
-                margin: 0;
-            }
-            button.owl-next {
-                position: absolute;
-                top: 0;
-                right: 0;
-                height: 100%;
-                width: 10rem;
-                margin: 0;
-            }
-        }
-    }
-    .carousel-inner {
-        img {
-            width: 114%!important;
-            height: auto;
-            opacity: .9;
-            transform: translateX(-4.5%);
-            -webkit-transform: translateX(-4.5%);
-            -moz-transform: translateX(-4.5%);
-            -ms-transform: translateX(-4.5%);
-            -o-transform: translateX(-4.5%);
-            filter: grayscale(100%);
-        }
-    }
-    .overlay {
-        background-color: rgba(190, 190, 190, 0.2);
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        height: 100%;
-        left: -1px;
-        right: -1px;
-        transition: transform .3s, opacity .6s;
-        pointer-events: none;
-    }
-    .banner-inner {
-        &:hover .control-slider .prev-next-button {
-            opacity: 1;
-
-
-        }
-        &:hover .control-slider .carousel-control-prev {
-            transform: translateX(-20%);
-            -webkit-transform: translateX(-20%);
-            -moz-transform: translateX(-20%);
-            -ms-transform: translateX(-20%);
-            -o-transform: translateX(-20%);
-}
-        &:hover .control-slider .carousel-control-next{
-            transform: translateX(20%);
-            -webkit-transform: translateX(20%);
-            -moz-transform: translateX(20%);
-            -ms-transform: translateX(20%);
-            -o-transform: translateX(20%);
-        }
-
-
-        .control-slider {
-            position: relative;
-            top: -125%;
-            max-height: 100%;
-            height: 100%;
-            .prev-next-button {
-                &:hover {
-                    span {
-                        color: #ff0000;
+.wrapper-nav {
+    min-height: 100vh;
+    overflow: hidden;
+    .banner {
+        // position: absolute;
+        // top: 0;
+        // z-index: 1;
+        // height: 75rem;
+        // height: 60rem;
+        // margin-bottom: 2rem;
+        .owl-carousel {
+            .owl-stage-outer {
+                .owl-stage {
+                    .owl-item {
+                        // position: absolute;
+                        // top: 0;
+                        // bottom: 0;
+                        // height: 100%;
+                        object-fit: cover;
+                        img {
+                            width: 100%!important;
+                            // max-height: 100vh;
+                            opacity: .9;
+                            filter: grayscale(100%);
+                        }
                     }
                 }
-                position: absolute;
-                width: 4rem;
-                top: 30%;
-                vertical-align: middle;
-                opacity: 0;
-                transition: all .3s ease;
-                -webkit-transition: all .3s ease;
-                -moz-transition: all .3s ease;
-                -ms-transition: all .3s ease;
-                -o-transition: all .3s ease;
-                span {
+                .overlay {
+                    background-color: rgba(190, 190, 190, 0.2);
+                    position: absolute;
+                    top: 0;
+                    bottom: 0;
+                    height: 100%;
+                    left: -1px;
+                    right: -1px;
+                    transition: transform .3s, opacity .6s;
+                    pointer-events: none;
+                }
+            }
+            .owl-nav {
+                .owl-prev {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    height: 100%;
+                    width: 10rem;
+                    margin: 0;
+                }
+                .owl-next {
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    height: 100%;
+                    width: 10rem;
+                    margin: 0;
+                }
+                button.owl-prev,
+                button.owl-next {
+                    background: transparent;
+                    opacity: 0;
                     transition: all .3s ease;
                     -webkit-transition: all .3s ease;
                     -moz-transition: all .3s ease;
                     -ms-transition: all .3s ease;
                     -o-transition: all .3s ease;
-                    color: #fff;
+                    &:hover{
+                        outline: none;
+                    }
+                    i {
+                        transition: all .3s ease;
+                        -webkit-transition: all .3s ease;
+                        -moz-transition: all .3s ease;
+                        -ms-transition: all .3s ease;
+                        -o-transition: all .3s ease;
+                        color: #fff;
+                        font-size: 2.2rem;
+                    }
+                    &:hover i {
+                        color: #ff0000;
+                    }
                 }
             }
-            .icon-slider {
-                font-size: 2.2rem;
+        }
+        .banner-inner {
+            button.owl-prev,
+            button.owl-next {
+                outline: none;
             }
-            .carousel-control-prev {
-                left: 2%;
+            &:hover button.owl-prev,
+            &:hover button.owl-next {
+                opacity: 1;
+                outline: none;
             }
-            .carousel-control-next {
-                right: 2%;
-
+            &:hover .owl-prev {
+                transform: translateX(-20%);
+                -webkit-transform: translateX(-20%);
+                -moz-transform: translateX(-20%);
+                -ms-transform: translateX(-20%);
+                -o-transform: translateX(-20%);
+            }    
+            &:hover .owl-next {
+                transform: translateX(20%);
+                -webkit-transform: translateX(20%);
+                -moz-transform: translateX(20%);
+                -ms-transform: translateX(20%);
+                -o-transform: translateX(20%);
             }
         }
-
+        .fill {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            right: 0;
+            bottom: 0;
+            padding: 0 !important;
+            margin: 0 !important;
+        }
+        // .carousel-inner {
+        //     img {
+        //         width: 114%!important;
+        //         height: auto;
+        //         opacity: .9;
+        //         transform: translateX(-4.5%);
+        //         -webkit-transform: translateX(-4.5%);
+        //         -moz-transform: translateX(-4.5%);
+        //         -ms-transform: translateX(-4.5%);
+        //         -o-transform: translateX(-4.5%);
+        //         filter: grayscale(100%);
+        //     }
+        // }
+        // .overlay {
+        //     background-color: rgba(190, 190, 190, 0.2);
+        //     position: absolute;
+        //     top: 0;
+        //     bottom: 0;
+        //     height: 100%;
+        //     left: -1px;
+        //     right: -1px;
+        //     transition: transform .3s, opacity .6s;
+        //     pointer-events: none;
+        // }
+        
     }
-}
+}    
