--- a/ProjectHKII-Website/src/view/patials/banner.pug
+++ b/ProjectHKII-Website/src/view/patials/banner.pug
@@ -13,11 +13,17 @@ section.banner
     //-         a.prev-next-button.carousel-control-next(href='#carouselExampleControls' role='button' data-slide='next')
     //-             span.fas.fa-chevron-right.icon-slider(aria-hidden='true')
     //-             span.sr-only Next
-    .owl-carousel.owl-theme.owl-loaded
+    //- .position-absolute
+    .owl-carousel.owl-theme.owl-loaded.banner-inner
         .owl-stage-outer
             .owl-stage
                 .owl-item
                     img.d-block.w-100(src='../../../dist/assets/images/banner-01.jpg' alt='banner1')
                 .owl-item
                     img.d-block.w-100(src='../../../dist/assets/images/banner-02.jpg' alt='banner2')
-        
+            .overlay
+        //- .owl-nav
+        //-     button.owl-prev
+        //-         i.fa.fa-chevron-left
+        //-     button.owl-next
+        //-         i.fa.fa-chevron-right
