--- a/ProjectHKII-Website/src/sass/_typography.scss
+++ b/ProjectHKII-Website/src/sass/_typography.scss
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Kanit:400,500,700|Maven+Pro:400,500,700&display=swap');
 
 html, body{
+    width: 100%;
+    height: auto;
+    overflow-x: hidden;
     font-size: 62.5%;
     width: 100%;
     overflow-x: hidden;
