--- a/ProjectHKII-Website/src/sass/_colors.scss
+++ b/ProjectHKII-Website/src/sass/_colors.scss
@@ -16,7 +16,7 @@
 
 // $text-colors: () !default;
 // $text-colors: map-merge((
-//     "text-green": $green,
+//     "text-green": $green-matt,
 //     "text-olive": $olive,
 //     "text-blue": $blue,
 //     "text-tomato": $tomato,
