--- a/ProjectHKII-Website/src/sass/components/banner.scss
+++ b/ProjectHKII-Website/src/sass/components/banner.scss
@@ -1,6 +1,6 @@
 .wrapper-nav {
-    min-height: 100vh;
-    overflow: hidden;
+    // min-height: 100vh;
+    // overflow: hidden;
     .banner {
         // position: absolute;
         // top: 0;
@@ -8,21 +8,52 @@
         // height: 75rem;
         // height: 60rem;
         // margin-bottom: 2rem;
+        .owl-loading {
+            opacity: 1;
+        }
         .owl-carousel {
+            // position: relative;
+            // overflow: hidden;
             .owl-stage-outer {
+                // position: absolute;
+                // width: 100%;
+                // height: 100%;
+                // overflow: hidden;
                 .owl-stage {
+                    // position: absolute;
+                    // left: 0;
+                    // padding-top: 550px;
                     .owl-item {
                         // position: absolute;
                         // top: 0;
                         // bottom: 0;
                         // height: 100%;
-                        object-fit: cover;
-                        img {
-                            width: 100%!important;
-                            // max-height: 100vh;
-                            opacity: .9;
-                            filter: grayscale(100%);
+                        // img {
+                        //     width: 100%!important;
+                        //     // max-height: 100vh;
+                        //     opacity: .9;
+                        //     filter: grayscale(100%);
+                        // }
+                        .owl-lazy {
+                            background-position: 40% 0%;
+                            background-size: cover !important;
+                            background-repeat: no-repeat !important;
                         }
+                        // .bg-img-01 {
+                        //     // box-sizing: border-box;
+                        //     background-image: url('http://mauweb.monamedia.net/officexinh/wp-content/uploads/2018/06/banner-01.jpg');
+                        //     // background-position: 40% 0%;
+                        //     // background-size: cover !important;
+                        //     background-repeat: no-repeat !important;
+                        //     width: 100%;
+                        // }
+                        // .bg-img-02 {
+                        //     // box-sizing: border-box;
+                        //     background-image: url('http://mauweb.monamedia.net/officexinh/wp-content/uploads/2018/06/banner-02.jpg');
+                            // // background-position: 40% 0%;
+                            // // background-size: cover !important;
+                            // background-repeat: no-repeat !important;
+                        // }
                     }
                 }
                 .overlay {
@@ -36,6 +67,18 @@
                     transition: transform .3s, opacity .6s;
                     pointer-events: none;
                 }
+                // .overlay-2 {
+                //     background-color: rgb(234, 234, 234);
+                //     position: absolute;
+                //     top: 0;
+                //     bottom: 0;
+                //     height: 100%;
+                //     left: -1px;
+                //     right: -1px;
+                //     transition: transform .3s, opacity .6s;
+                //     pointer-events: none;
+                //     z-index: -999;
+                // }
             }
             .owl-nav {
                 .owl-prev {
@@ -80,6 +123,9 @@
                     }
                 }
             }
+        }
+        .owl-carousel .owl-item .owl-lazy:not([src]), .owl-carousel .owl-item .owl-lazy[src^=""] {
+            max-height: none !important;
         }
         .banner-inner {
             button.owl-prev,
@@ -143,3 +189,52 @@
 
     }
 }
+
+@media (max-width: 549px) {
+    .owl-carousel {
+        height: 35rem;
+        .owl-stage {
+            // padding-top: 35rem;
+            .owl-lazy {
+                height: 35rem;
+            }
+        }
+    }
+}
+
+@media (min-width: 550px) {
+    .owl-carousel {
+        height: 50rem;
+        .owl-stage {
+            // padding-top: 50rem;
+            .owl-lazy {
+                height: 50rem;
+            }
+        }
+    }
+}
+
+@media (min-width: 850px) {
+    .owl-carousel {
+        height: 75rem;
+        .owl-stage {
+            // padding-top: 75rem;
+            .owl-lazy {
+                height: 75rem;
+            }
+        }
+    }
+}
+
+@media (min-width: 1200px) {
+    .owl-carousel {
+        height: 95rem;
+        .owl-stage {
+            // padding-top: 95rem;
+            .owl-lazy {
+                height: 95rem;
+            }
+        }
+    }
+}
+
