--- a/ProjectHKII-Website/src/view/layouts/layout-other-pages.pug
+++ b/ProjectHKII-Website/src/view/layouts/layout-other-pages.pug
@@ -18,8 +18,7 @@ html(lang="en")
         link(rel="stylesheet", href="../../../dist/css/styles.css")
     body
         .container-fluid
-            .wrapper-nav
-                include ../patials/navigation.pug
+            include ../patials/navigation-other-page.pug
             block main-content
             include ../patials/footer.pug
 
