--- a/ProjectHKII-Website/src/sass/_components.scss
+++ b/ProjectHKII-Website/src/sass/_components.scss
@@ -2,6 +2,8 @@
 @import 'components/products.scss';
 @import 'components/icon-box.scss';
 @import 'components/footer.scss';
+@import 'components/product-detail.scss';
+@import 'components/category-detail.scss';
 
 
 
